--- a/index.html
+++ b/index.html
@@ -48,18 +48,10 @@
                 <div class="col-lg-6 d-none d-lg-block">
                     <div class="social-icon-two float-left">
                         <ul class="float-left">
-                            <li><a href="javascript:;">
+                            <li><a href="https://www.facebook.com/profile.php?id=100089312967305">
                                     <i class="fab fa-facebook-f"></i>
                                 </a></li>
-                            <li><a href="javascript:;">
-                                    <i class="fab fa-twitter"></i>
-                                </a></li>
-                            <li><a href="javascript:;">
-                                    <i class="fab fa-instagram"></i>
-                                </a></li>
-                            <li><a href="javascript:;">
-                                    <i class="fab fa-pinterest-p"></i>
-                                </a></li>
+                            <li>
                         </ul>
                     </div>
                 </div>
@@ -215,27 +207,6 @@
                             <span class="nav-toggle__text">Toggle Menu</span>
                         </button>
                     </div>
-                    <div class="col-xl-2 col-lg-3 col-md-2 d-xl-block d-lg-block d-md-none d-sm-none d-none">
-                        <div class="header-two-search">
-                            <ul>
-                                <li>
-                                    <div class="search">
-                                        <div class="search-box search-box-two">
-                                            <input type="search" class="search-input" placeholder="Search Here">
-                                            <a href="javascript:;" class="search-btn"><i class="fas fa-search"></i></a>
-
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="login_btn_two">
-                                    <a href="javascript:;">
-                                        <span data-bs-toggle="modal" data-bs-target="#staticBackdrop">Login</span>
-                                        <span data-bs-toggle="modal" data-bs-target="#staticBackdrop1">/Register</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -271,7 +242,7 @@
                             <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
+                            <li><a href="service-nailart.html"> Nails Art Service</a></li>
                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
@@ -474,7 +445,7 @@
                     <div class="offer-img">
                         <img src="images/offer-3.png" alt="img">
                         <div class="offer-content">
-                            <h3><a href="service-nailart.html">Lydney Nails</a></h3>
+                            <h3><a href="service-nailart.html">Nails Art</a></h3>
                         </div>
                     </div>
                 </li>
@@ -494,164 +465,7 @@
 
     <!-- professional-start -->
 
-    <div class="professional-wrapper float-left ptb-100 pt-0">
-        <div class="container">
-            <div class="professional-head head-border animated wow fade-up">
-                <h3>OUR PROFESSIONALS</h3>
-                <span></span>
-            </div>
-            <div class="professional-slider animated wow fade-box pb-0">
-                <div class="owl-carousel owl-theme">
-                    <div class="item">
-                        <div class="slider-wrapper">
-                            <div class="professional-img">
-                                <img src="images/slider-1.jpg" alt="img">
-                            </div>
-                            <div class="professional-icon">
-                                <ul>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-instagram"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a></li>
-                                </ul>
-                            </div>
-                            <div class="professional-name">
-                                <h5>Smith Dan</h5>
-                                <span>Stylist</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="slider-wrapper">
-                            <div class="professional-img">
-                                <img src="images/slider-2.jpg" alt="img">
-                            </div>
-                            <div class="professional-icon">
-                                <ul>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-instagram"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a></li>
-                                </ul>
-                            </div>
-                            <div class="professional-name">
-                                <h5>Jordan Mike</h5>
-                                <span>Stylist</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="slider-wrapper">
-                            <div class="professional-img">
-                                <img src="images/slider-3.jpg" alt="img">
-                            </div>
-                            <div class="professional-icon">
-                                <ul>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-instagram"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a></li>
-                                </ul>
-                            </div>
-                            <div class="professional-name">
-                                <h5>Smith Dan</h5>
-                                <span>Stylist</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="slider-wrapper">
-                            <div class="professional-img">
-                                <img src="images/slider-4.jpg" alt="img">
-                            </div>
-                            <div class="professional-icon">
-                                <ul>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-instagram"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a></li>
-                                </ul>
-                            </div>
-                            <div class="professional-name">
-                                <h5>Smith Dan</h5>
-                                <span>Stylist</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="slider-wrapper">
-                            <div class="professional-img">
-                                <img src="images/slider-5.jpg" alt="img">
-                            </div>
-                            <div class="professional-icon">
-                                <ul>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-instagram"></i>
-                                        </a></li>
-                                    <li><a href="javascript:;">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a></li>
-                                </ul>
-                            </div>
-                            <div class="professional-name">
-                                <h5>Jordan Mike</h5>
-                                <span>Stylist</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- professional-end -->
-
-    <!-- news-section-start -->
-
-    <div class="news-wrapper-two float-left animated wow fade-up">
-        <div class="container">
-            <div class="row">
-                <div class="news-head head-border">
-                    <h3>LATEST NAIL TRENDS AND DESIGNS FOR YOU</h3>
-                    <span></span>
-                </div>
-                <div class="subscribe-form">
-                    <input type="email" placeholder="Enter Your Email">
-                    <div class="suscribe-btn-two">
-                        <a href="javascript:;" class="main-btn">
-                            <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>Subscribe Now
-                            </span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- news-section-end -->
 
     <!-- portfolio-section-start -->
 
@@ -723,79 +537,6 @@
 
 
     <!-- portfolio-section-end -->
-
-    <!-- testimonial-section-start -->
-
-    <div class="testimonial-wrapper-two float-left ptb-100">
-        <div class="container">
-            <div class="row">
-                <div class="testimonial-head head-border animated wow fade-up">
-                    <h3>Our Testimonials</h3>
-                    <span></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 col-md-12">
-                    <div class="test-slider-two float-left animated wow fade-box">
-                        <div class="owl-carousel owl-theme">
-                            <div class="item">
-                                <div class="testimonial-box-two">
-                                    <img src="images/test-1.png" alt="img">
-                                    <div class="testimonial-content">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and
-                                            typesetting industry. Lorem Ipsum has been the industry's
-                                            standard dummy text ever since the 1500s, when an
-                                            unknown printer.</p>
-                                        <h6>Freelanv</h6>
-                                        <span>Freelancer</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="testimonial-box-two">
-                                    <img src="images/test-2.png" alt="img">
-                                    <div class="testimonial-content">
-                                        <p>It is a long established fact that a reader will be distracted by the
-                                            readable content of a page when looking at its layout. The point of using
-                                            that it has a more-or-less normal, making it look like readable </p>
-                                        <h6>Pamela Adams</h6>
-                                        <span>Students</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="testimonial-box-two">
-                                    <img src="images/test-3.png" alt="img">
-                                    <div class="testimonial-content">
-                                        <p>There are many variations of passages of Lorem Ipsum available,
-                                            but the majority have suffered alteration in some form, by injected humour,
-                                            sor randomised words which don't look even slightly .</p>
-                                        <h6>Arika dev</h6>
-                                        <span>Students</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="testimonial-box-two">
-                                    <img src="images/test-three1.png" alt="img">
-                                    <div class="testimonial-content">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and
-                                            typesetting industry. Lorem Ipsum has been the industry's
-                                            standard dummy text ever since the 1500s, when an
-                                            unknown printer took.</p>
-                                        <h6>Pamela Adams</h6>
-                                        <span>Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- testimonial-section-end -->
 
     <!-- news-section-start -->
 
@@ -975,7 +716,7 @@
                                 <div class="address-content">
                                     <a href="javascript:;">
                                         <span>PHONE</span>
-                                        0800-123456, 0800-123489
+                                        07889 789999
                                     </a>
                                 </div>
                             </li>
