--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="item">
                     <div class="slider-wrapper">
                         <div class="slider-img">
-                            <img src="images/bg-slider-three.jpg" alt="img" width="1519" height="1139">
+                            <img src="images/bg-slider-three.jpg" alt="img">
                             <div class="slider-content">
                                 <h1 class="fadeInUpShorter appear-animate">Choose The Best Attitude
                                     And Services</h1>
@@ -736,7 +736,7 @@
                 </div>
             </div>
             <div class="bottom-footer">
-                <p>Copyright © 2023 Nail Salon Template Designed By <a href="javascript:;">Webstrot.</a></p>
+                <p>Copyright © 2023 Lydney Nails</p>
             </div>
         </div>
     </div>
