--- a/appointment.html
+++ b/appointment.html
@@ -591,7 +591,7 @@
                 </div>
             </div>
             <div class="bottom-footer">
-                <p>Copyright © 2023 Nail Salon Template Designed By <a href="javascript:;">Webstrot.</a></p>
+                <p>Copyright © 2023 Lydney Nails</p>
             </div>
         </div>
     </div>
