--- a/index.html
+++ b/index.html
@@ -97,16 +97,6 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Page
-                                            <i class="fas fa-chevron-right"></i>
-                                        </a>
-                                        <ul class="sub-menu">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="our-team.html">Team</a></li>
-                                            <li><a href="team-single.html">Expert</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
                                         <a class="nav-link" href="javascript:;">Services
                                             <i class="fas fa-chevron-right"></i>
                                         </a>
@@ -119,15 +109,8 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Gallery
-                                            <i class="fas fa-chevron-right"></i>
+                                        <a class="nav-link" href="gallery.html">Gallery
                                         </a>
-                                        <ul class="sub-menu">
-                                            <li><a href="gallery.html">3 Column</a></li>
-                                            <li><a href="gallery2.html">4 Column</a></li>
-                                            <li><a href="gallery3.html">5 Column</a></li>
-                                            <li><a href="gallery4.html">Masonry Gallery</a></li>
-                                        </ul>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="javascript:;">Blog
