--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                 <p class="fadeInUpShorter appear-animation-visible appear-animate">Change Your Nails
                                     Look With Our Talented Stylists.</p>
                                 <div class="banner-two-btn fadeInUpShorter appear-animation-visible appear-animate">
-                                    <a href="appointment.html" class="main-btn">
+                                    <a href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d" class="main-btn">
                                         <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>Get
                                             An Appointment</span>
                                     </a>
@@ -333,7 +333,7 @@
                                 <p class="fadeInUpShorter appear-animation-visible appear-animate ">Change Your Nails
                                     Look With Our Talented Stylists.</p>
                                 <div class="banner-two-btn fadeInUpShorter appear-animation-visible appear-animate">
-                                    <a href="appointment.html" class="main-btn">
+                                    <a href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d" class="main-btn">
                                         <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>Get
                                             An Appointment</span>
                                     </a>
@@ -594,9 +594,7 @@
                             <img src="images/footer-logo.png" alt="img">
                         </div>
                         <div class="footer-pera">
-                            <p>Lorem Ipsum is simply dummy text of the printing and
-                                typesetting industry. Lorem Ipsum has been the industry's
-                                standard dummy text ever since.</p>
+                            <p>Professional Nails Service</p>
                         </div>
                         <div class="footer-icon">
                             <ul>
@@ -629,7 +627,7 @@
                             <li><a href="our-team.html">
                                     <span><i class="fas fa-chevron-right"></i></span> Our Team
                                 </a></li>
-                            <li><a href="appointment.html">
+                            <li><a href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
                                     <span><i class="fas fa-chevron-right"></i></span> Booking
                                 </a></li>
                             <li><a href="contact.html">
@@ -710,7 +708,7 @@
                                 <div class="address-content">
                                     <a href="javascript:;">
                                         <span>EMAIL</span>
-                                        nailsalon@example.com
+                                        nguyenthibetrang@gmail.com
                                     </a>
                                 </div>
                             </li>
