--- a/service-padi.html
+++ b/service-padi.html
@@ -224,7 +224,7 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="appointment.html">
+                                        <a class="nav-link" href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
                                             <div class="main-btn">
                                                 <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>Get
                                                     An Appointment</span>
@@ -962,7 +962,7 @@
                             <li><a href="our-team.html">
                                     <span><i class="fas fa-chevron-right"></i></span> Our Team
                                 </a></li>
-                            <li><a href="appointment.html">
+                            <li><a href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
                                     <span><i class="fas fa-chevron-right"></i></span> Booking
                                 </a></li>
                             <li><a href="contact.html">
