--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav mb-2 mb-lg-0 pt-0">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Home
+                                        <a class="nav-link" href="javascript:;">
+                                            Home
                                             <i class="fas fa-chevron-right"></i>
                                         </a>
                                         <ul class="sub-menu">
@@ -97,7 +98,8 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Services
+                                        <a class="nav-link" href="javascript:;">
+                                            Services
                                             <i class="fas fa-chevron-right"></i>
                                         </a>
                                         <ul class="sub-menu">
@@ -109,11 +111,13 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="gallery.html">Gallery
+                                        <a class="nav-link" href="gallery.html">
+                                            Gallery
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Blog
+                                        <a class="nav-link" href="javascript:;">
+                                            Blog
                                             <i class="fas fa-chevron-right"></i>
                                         </a>
                                         <ul class="sub-menu">
@@ -123,62 +127,97 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">Shortcode
+                                        <a class="nav-link" href="javascript:;">
+                                            Shortcode
                                             <i class="fas fa-chevron-right"></i>
                                         </a>
                                         <div class="sub-menu mega-menu">
                                             <ul>
-                                                <li><a href="accordion.html">
+                                                <li>
+                                                    <a href="accordion.html">
                                                         Accordion
-                                                    </a></li>
-                                                <li><a href="alert.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="alert.html">
                                                         Alert
-                                                    </a></li>
-                                                <li><a href="button.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="button.html">
                                                         Button
-                                                    </a></li>
-                                                <li><a href="client.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="client.html">
                                                         Client
-                                                    </a></li>
-                                                <li><a href="counter.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="counter.html">
                                                         Counter
-                                                    </a></li>
+                                                    </a>
+                                                </li>
                                             </ul>
                                             <ul>
-                                                <li><a href="form.html">
+                                                <li>
+                                                    <a href="form.html">
                                                         Form
-                                                    </a></li>
-                                                <li><a href="icon.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="icon.html">
                                                         Icon
-                                                    </a></li>
-                                                <li><a href="list.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="list.html">
                                                         List
-                                                    </a></li>
-                                                <li><a href="pricing.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="pricing.html">
                                                         Pricing Table
-                                                    </a></li>
-                                                <li><a href="social-icon.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="social-icon.html">
                                                         Social Icon
-                                                    </a></li>
+                                                    </a>
+                                                </li>
                                             </ul>
                                             <ul>
-                                                <li><a href="tab.html">
+                                                <li>
+                                                    <a href="tab.html">
                                                         Tab
-                                                    </a></li>
-                                                <li><a href="team.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="team.html">
                                                         Team
-                                                    </a></li>
-                                                <li><a href="testimonial.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="testimonial.html">
                                                         Testimonial
-                                                    </a></li>
-                                                <li><a href="gallery-short.html">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="gallery-short.html">
                                                         Gallery
-                                                    </a></li>
+                                                    </a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
+                                            Book an Appointment
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -273,6 +312,17 @@
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
+                            <div class="main-btn">
+                                <em><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></em><span>
+                                    Get
+                                    An Appointment
+                                </span>
+                            </div>
+                        </a>
                     </li>
                 </ul>
                 <div class="sidebar-social float-left">
