--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                             <li><a href="service.html">Service Page</a></li>
                                             <li><a href="service-mani.html"> Manicure Service</a></li>
                                             <li><a href="service-padi.html"> Pedicure Service</a></li>
-                                            <li><a href="service-nailart.html"> Lydney Nails Service</a></li>
+                                            <li><a href="service-nailart.html"> Nails Art Service</a></li>
                                             <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                                         </ul>
                                     </li>
@@ -125,90 +125,6 @@
                                             <li><a href="blog-detail.html">Blog Details</a></li>
                                             <li><a href="blog-rightsidebar.html">Blog Right Sidebar</a></li>
                                         </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="javascript:;">
-                                            Shortcode
-                                            <i class="fas fa-chevron-right"></i>
-                                        </a>
-                                        <div class="sub-menu mega-menu">
-                                            <ul>
-                                                <li>
-                                                    <a href="accordion.html">
-                                                        Accordion
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="alert.html">
-                                                        Alert
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="button.html">
-                                                        Button
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="client.html">
-                                                        Client
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="counter.html">
-                                                        Counter
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                            <ul>
-                                                <li>
-                                                    <a href="form.html">
-                                                        Form
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="icon.html">
-                                                        Icon
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="list.html">
-                                                        List
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="pricing.html">
-                                                        Pricing Table
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="social-icon.html">
-                                                        Social Icon
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                            <ul>
-                                                <li>
-                                                    <a href="tab.html">
-                                                        Tab
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="team.html">
-                                                        Team
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="testimonial.html">
-                                                        Testimonial
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="gallery-short.html">
-                                                        Gallery
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
