--- a/index.html
+++ b/index.html
@@ -564,18 +564,11 @@
                         </div>
                         <div class="footer-icon">
                             <ul>
-                                <li><a href="javascript:;">
+                                <li>
+                                    <a href="https://www.facebook.com/profile.php?id=100089312967305">
                                         <i class="fab fa-facebook-f"></i>
-                                    </a></li>
-                                <li><a href="javascript:;">
-                                        <i class="fab fa-twitter"></i>
-                                    </a></li>
-                                <li><a href="javascript:;">
-                                        <i class="fab fa-instagram"></i>
-                                    </a></li>
-                                <li><a href="javascript:;">
-                                        <i class="fab fa-pinterest-p"></i>
-                                    </a></li>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -599,45 +592,6 @@
                             <li><a href="contact.html">
                                     <span><i class="fas fa-chevron-right"></i></span> Contact Us
                                 </a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12">
-                    <div class="footer-insta">
-                        <h5>Instagram post</h5>
-                        <ul>
-                            <li>
-                                <a href="javascript:;"><img src="images/insta-blog1.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-
-                            </li>
-                            <li class="insta-post-gap">
-                                <a href="javascript:;"> <img src="images/insta-blog4.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:;"><img src="images/insta-blog2.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-
-                            </li>
-                            <li class="insta-post-gap">
-                                <a href="javascript:;"> <img src="images/insta-blog5.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:;"><img src="images/insta-blog3.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-                            </li>
-                            <li class="insta-post-gap">
-                                <a href="javascript:;"><img src="images/insta-blog6.png" alt="img">
-                                    <span><i class="fab fa-instagram"></i></span>
-                                </a>
-                            </li>
                         </ul>
                     </div>
                 </div>
